XdgSurfaceClient: set to current activity and desktop in constructors

BUG: 435745
FIXED-IN: 5.22.2